<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.slides.SlideFragment1">


    <ImageView
        android:id="@+id/img2"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:padding="50dp"
        android:contentDescription="@string/perro"
        android:src="@drawable/dog_slide2" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/getStartedTitulo"
        android:text="@string/tituloSlide2" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/getStartedTexto"
        android:text="@string/textoSlide2" />
</LinearLayout>