<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".fragments.DogDetailFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/slider_constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/image_slider"
                    android:layout_width="wrap_content"
                    android:layout_height="350dp"
                    app:iss_auto_cycle="true"
                    app:iss_delay="1000"
                    app:iss_period="1000"
                    app:iss_text_align="CENTER"
                    app:iss_placeholder="@drawable/paw_adopt_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"></com.denzcoskun.imageslider.ImageSlider>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottom_dialog_constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/detail_redondo"
                android:paddingTop="6dp"
                app:layout_constraintTop_toBottomOf="@+id/slider_constraint">

                <View
                    android:layout_width="60dp"
                    android:layout_height="1dp"
                    android:background="@color/pet_adopt"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dogDetail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/poppins700"
                    android:text="Nombre"
                    android:textSize="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.106"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <TextView
                    android:id="@+id/dogDetail_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="108dp"
                    android:fontFamily="@font/poppins700"
                    android:text="Edad"
                    android:textSize="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.828"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/adoptante_detalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins700"
                    android:text="Edad"
                    android:textSize="20dp"
                    android:visibility="visible"
                    android:layout_marginLeft="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/box_layout_2"
                    app:layout_constraintTop_toBottomOf="@+id/adoptante_texto_detalle" />

                <TextView
                    android:id="@+id/adoptante_texto_detalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="84dp"
                    android:fontFamily="@font/poppins"
                    android:text="Adoptado por:"
                    android:textSize="15dp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.828"
                    app:layout_constraintStart_toEndOf="@+id/box_layout_2"
                    app:layout_constraintTop_toBottomOf="@+id/dogDetail_age" />

                <TextView
                    android:id="@+id/dogDetail_provincia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:drawableStart="@drawable/baseline_location_on_24"
                    android:fontFamily="@font/poppins_extralight"
                    android:text="Buenos Aires"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dogDetail_name" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/box_layout"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/box"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dogDetail_provincia">

                    <TextView
                        android:id="@+id/dogDetail_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/poppins"
                        android:text="Male"
                        android:textAlignment="center"
                        android:textSize="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.466"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/dogDetail_sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins_extralight"
                        android:text="Sex"
                        android:textSize="11dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.513"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dogDetail_gender" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/box_layout_2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/box"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.301"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dogDetail_provincia">

                    <TextView
                        android:id="@+id/dogDetail_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/poppins"
                        android:text="2kg"
                        android:textAlignment="center"
                        android:textSize="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.466"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/dogDetail_peso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins_extralight"
                        android:text="Peso"
                        android:textSize="11dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.514"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dogDetail_weight" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/duenio_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@+id/bottom_dialog_constraint">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/duenio_layout_img"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/pancreas"
                        app:shapeAppearanceOverlay="@style/perfil_circular"
                        tools:srcCompat="@tools:sample/avatars" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_duenio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/poppins_extralight"
                            android:text="@string/duenio"
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_detail_duenio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:text=""
                            android:textColor="@color/nombre_perfil_config"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/duenio_layout_phone"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="200dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/round_call_24"
                        app:shapeAppearanceOverlay="@style/perfil_circular"
                        tools:srcCompat="@tools:sample/avatars"></com.google.android.material.imageview.ShapeableImageView>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_extralight"
                    android:text="@string/lorem"
                    android:textSize="14dp"></TextView>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/adoptar_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/adoptar"
                android:enabled="true"
                app:cornerRadius="8dp"
                app:layout_constraintTop_toBottomOf="@+id/duenio_layout"
                tools:layout_editor_absoluteX="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>